add link to karlduino.org within first post

--- a/content/post/2022-09-04-new-site.md
+++ b/content/post/2022-09-04-new-site.md
@@ -9,7 +9,7 @@ tags: [news]
 
 I'm working on a new project ([a low-cost CO2
 monitor](https://github.com/karlduino/CO2monitor)), which inspired me
-to create a new website.
+to create a [new website](https://karlduino.org).
 
 My [old website](https://karlduino.wordpress.com) is now pretty old
 (last post 2014-01-14), and I just don't want to touch Wordpress
